# knapsack

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  Makefile c  README.md  conanfile.py  conanfile.txt  test.out
cmake/: CompilerOptimizations.cmake  Conan.cmake
exec/: CMakeLists.txt  knapsack_bnb.cpp  knapsack_dp.cpp  unbounded_knapsack_bnb.cpp
exec/utils/: chrono.hpp  instance.hpp
include/: all.hpp  branch_and_bound copy.hpp  branch_and_bound.hpp  instance.hpp  parallel_branch_and_bound copy.hpp  parallel_branch_and_bound.hpp  solution.hpp
include/knapsack/: branch_and_bound copy.hpp  branch_and_bound.hpp  branch_and_bound_stl copy.hpp  branch_and_bound_stl.hpp  dynamic_programming.hpp  instance.hpp  knapsack_bnb.hpp  knapsack_dp.hpp  solution.hpp  unbounded_knapsack_bnb.hpp
include/knapstack/: branch_and_bound.hpp  dynamic_programming.hpp  instance.hpp  solution.hpp
include/unbounded_knapsack/: branch_and_bound.hpp  instance.hpp  solution.hpp
include/unbounded_knapstack/: branch_and_bound.hpp  instance.hpp  solution.hpp
include/utils/: chrono.hpp  instance_parsers.hpp
include/wip/: branch_and_bound copy.hpp  parallel_branch_and_bound n.hpp  parallel_branch_and_bound.hpp
instances/: sac0  sac_
instances/unbounded_knapsack/: corepb.ukp  exnsd18.ukp  exnsd26.ukp  exnsdbis10.ukp  exnsdbis18.ukp
instances/unbounded_knapstack/: exnsd16.ukp  exnsd20.ukp  exnsds12.ukp
single-header/: easy_knapstack.hpp  knapsack.hpp  knapstack_solver.hpp
single-header/fhamonic/: knapsack.hpp  knapstack.hpp
src/: knapsack_bnb.cpp  knapstack_bnb copy.cpp  knapstack_bnb old.cpp  knapstack_bnb.cpp  knapstack_dp.cpp  test.cpp  test_knapstack_bnb.cpp  unbounded_knapstack_bnb.cpp
test/: CMakeLists.txt  optimum_value_test.cpp
